import mongoose from "mongoose";
import { ROLE_VALUES, ROLES } from "../../../common/constants/roles.js";

const userSchema = new mongoose.Schema(
  {
    name: {
      type: String,
      required: true,
      trim: true
    },
    email: {
      type: String,
      required: true,
      unique: true,
      lowercase: true,
      trim: true
    },
    password: {
      type: String,
      required: true
    },
    role: {
      type: String,
      enum: ROLE_VALUES,
      default: ROLES.USER
    },
    avatar: {
      type: String,
      default: null
    },
    isActive: {
      type: Boolean,
      default: true
    },
    firstLoginRequired: {
      type: Boolean,
      default: false
    },
    savedEvents: [{
      type: mongoose.Schema.Types.ObjectId,
      ref: "Event"
    }],
    createdBy: {
      type: mongoose.Schema.Types.ObjectId,
      ref: "User",
      default: null
    }
  },
  { timestamps: true }
);

export const User = mongoose.model("User", userSchema);

